{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 352,
  "lineage": "c348dc62-953f-1996-c7dd-2fe94d86c84c",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "ns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mvd",
            "metadata": [
              {
                "generation": 0,
                "name": "mvd",
                "resource_version": "543",
                "uid": "120fded2-e7fa-4f81-8d44-63c31be32cac"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "dataspace-issuer-did-server-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/dataspace-issuer",
            "metadata": [
              {
                "generation": 0,
                "name": "dataspace-issuer",
                "namespace": "mvd",
                "resource_version": "660",
                "uid": "e005c69e-4ddd-4d02-aef6-801d283bfa94"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.97.35.3",
                "cluster_ips": [
                  "10.97.35.3"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "web",
                    "node_port": 31966,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "dataspace-issuer-server"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_deployment.dataspace-issuer-did-server",
            "kubernetes_namespace.ns"
          ]
        }
      ]
    },
    {
      "module": "module.consumer-connector",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "api-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mvd/consumer-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "consumer-ingress",
                "namespace": "mvd",
                "resource_version": "1643",
                "uid": "9bcac67b-dac9-4aa3-aa96-d20b62530e02"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "consumer-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/consumer/health(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "consumer-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/consumer/cp(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "consumer-dataplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 11002
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/consumer/public(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "consumer-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8084
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/consumer/fc(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "consumer-vault",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8200
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/consumer/vault(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.49.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-consumer",
            "kubernetes_namespace.ns",
            "module.consumer-connector.kubernetes_config_map.connector-config",
            "module.consumer-connector.kubernetes_config_map.dataplane-config",
            "module.consumer-connector.kubernetes_config_map.participants-map",
            "module.consumer-connector.kubernetes_deployment.controlplane",
            "module.consumer-connector.kubernetes_deployment.dataplane",
            "module.consumer-connector.kubernetes_service.controlplane-service",
            "module.consumer-connector.kubernetes_service.dataplane-service",
            "module.consumer-postgres.kubernetes_config_map.postgres-env",
            "module.consumer-postgres.kubernetes_deployment.postgres",
            "module.consumer-postgres.kubernetes_service.pg-service",
            "module.consumer-sts.kubernetes_config_map.sts-config",
            "module.consumer-sts.kubernetes_deployment.sts",
            "module.consumer-sts.kubernetes_service.sts-service",
            "module.consumer-vault.helm_release.vault",
            "module.consumer-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.consumer-connector",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "controlplane-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/consumer-controlplane",
            "metadata": [
              {
                "generation": 0,
                "name": "consumer-controlplane",
                "namespace": "mvd",
                "resource_version": "1101",
                "uid": "174cdde2-e9d6-45ad-a5e6-ade0670dc2d6"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.106.40.17",
                "cluster_ips": [
                  "10.106.40.17"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "health",
                    "node_port": 31527,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  },
                  {
                    "name": "management",
                    "node_port": 30898,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "8081"
                  },
                  {
                    "name": "catalog",
                    "node_port": 30625,
                    "port": 8084,
                    "protocol": "TCP",
                    "target_port": "8084"
                  },
                  {
                    "name": "protocol",
                    "node_port": 31461,
                    "port": 8082,
                    "protocol": "TCP",
                    "target_port": "8082"
                  },
                  {
                    "name": "debug",
                    "node_port": 30840,
                    "port": 1044,
                    "protocol": "TCP",
                    "target_port": "1044"
                  },
                  {
                    "name": "control",
                    "node_port": 32113,
                    "port": 8083,
                    "protocol": "TCP",
                    "target_port": "8083"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "consumer-controlplane"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-consumer",
            "kubernetes_namespace.ns",
            "module.consumer-connector.kubernetes_config_map.connector-config",
            "module.consumer-connector.kubernetes_config_map.participants-map",
            "module.consumer-connector.kubernetes_deployment.controlplane",
            "module.consumer-postgres.kubernetes_config_map.postgres-env",
            "module.consumer-postgres.kubernetes_deployment.postgres",
            "module.consumer-postgres.kubernetes_service.pg-service",
            "module.consumer-sts.kubernetes_config_map.sts-config",
            "module.consumer-sts.kubernetes_deployment.sts",
            "module.consumer-sts.kubernetes_service.sts-service",
            "module.consumer-vault.helm_release.vault",
            "module.consumer-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.consumer-connector",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "dataplane-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/consumer-dataplane",
            "metadata": [
              {
                "generation": 0,
                "name": "consumer-dataplane",
                "namespace": "mvd",
                "resource_version": "1600",
                "uid": "e230fc6b-c3b2-45df-a0de-6c540c8f05d1"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.107.11.167",
                "cluster_ips": [
                  "10.107.11.167"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "control",
                    "node_port": 30419,
                    "port": 8083,
                    "protocol": "TCP",
                    "target_port": "8083"
                  },
                  {
                    "name": "public",
                    "node_port": 30686,
                    "port": 11002,
                    "protocol": "TCP",
                    "target_port": "11002"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "consumer-dataplane"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-consumer",
            "kubernetes_namespace.ns",
            "module.consumer-connector.kubernetes_config_map.connector-config",
            "module.consumer-connector.kubernetes_config_map.dataplane-config",
            "module.consumer-connector.kubernetes_config_map.participants-map",
            "module.consumer-connector.kubernetes_deployment.controlplane",
            "module.consumer-connector.kubernetes_deployment.dataplane",
            "module.consumer-postgres.kubernetes_config_map.postgres-env",
            "module.consumer-postgres.kubernetes_deployment.postgres",
            "module.consumer-postgres.kubernetes_service.pg-service",
            "module.consumer-sts.kubernetes_config_map.sts-config",
            "module.consumer-sts.kubernetes_deployment.sts",
            "module.consumer-sts.kubernetes_service.sts-service",
            "module.consumer-vault.helm_release.vault",
            "module.consumer-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.consumer-identityhub",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "api-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mvd/consumer-identityhub-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "consumer-identityhub-ingress",
                "namespace": "mvd",
                "resource_version": "1136",
                "uid": "02d73629-be7d-43f8-ad09-4628c9801d18"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "consumer-identityhub",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 7081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/consumer/cs(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.49.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-consumer",
            "kubernetes_namespace.ns",
            "module.consumer-identityhub.kubernetes_config_map.identityhub-config",
            "module.consumer-identityhub.kubernetes_config_map.identityhub-credentials-map",
            "module.consumer-identityhub.kubernetes_deployment.identityhub",
            "module.consumer-identityhub.kubernetes_service.ih-service",
            "module.consumer-postgres.kubernetes_config_map.postgres-env",
            "module.consumer-postgres.kubernetes_deployment.postgres",
            "module.consumer-postgres.kubernetes_service.pg-service",
            "module.consumer-sts.kubernetes_config_map.sts-config",
            "module.consumer-sts.kubernetes_deployment.sts",
            "module.consumer-sts.kubernetes_service.sts-service",
            "module.consumer-vault.helm_release.vault",
            "module.consumer-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.consumer-identityhub",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "did-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mvd/consumer-did-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/consumer/$2"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "consumer-did-ingress",
                "namespace": "mvd",
                "resource_version": "1137",
                "uid": "a6868c46-8ad1-4431-9c94-2b2b3a297e5d"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "consumer-identityhub",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 7083
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/consumer(/|\u0026)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.49.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-consumer",
            "kubernetes_namespace.ns",
            "module.consumer-identityhub.kubernetes_config_map.identityhub-config",
            "module.consumer-identityhub.kubernetes_config_map.identityhub-credentials-map",
            "module.consumer-identityhub.kubernetes_deployment.identityhub",
            "module.consumer-identityhub.kubernetes_service.ih-service",
            "module.consumer-postgres.kubernetes_config_map.postgres-env",
            "module.consumer-postgres.kubernetes_deployment.postgres",
            "module.consumer-postgres.kubernetes_service.pg-service",
            "module.consumer-sts.kubernetes_config_map.sts-config",
            "module.consumer-sts.kubernetes_deployment.sts",
            "module.consumer-sts.kubernetes_service.sts-service",
            "module.consumer-vault.helm_release.vault",
            "module.consumer-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.consumer-identityhub",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "ih-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/consumer-identityhub",
            "metadata": [
              {
                "generation": 0,
                "name": "consumer-identityhub",
                "namespace": "mvd",
                "resource_version": "1035",
                "uid": "e9303d69-eb89-424c-a70b-b6f0746c8fb8"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.104.200.105",
                "cluster_ips": [
                  "10.104.200.105"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "presentation",
                    "node_port": 32050,
                    "port": 7082,
                    "protocol": "TCP",
                    "target_port": "7082"
                  },
                  {
                    "name": "debug",
                    "node_port": 31852,
                    "port": 1044,
                    "protocol": "TCP",
                    "target_port": "1044"
                  },
                  {
                    "name": "management",
                    "node_port": 32676,
                    "port": 7081,
                    "protocol": "TCP",
                    "target_port": "7081"
                  },
                  {
                    "name": "did",
                    "node_port": 31464,
                    "port": 7083,
                    "protocol": "TCP",
                    "target_port": "7083"
                  },
                  {
                    "name": "sts",
                    "node_port": 32694,
                    "port": 7084,
                    "protocol": "TCP",
                    "target_port": "7084"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "consumer-identityhub"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-consumer",
            "kubernetes_namespace.ns",
            "module.consumer-identityhub.kubernetes_config_map.identityhub-config",
            "module.consumer-identityhub.kubernetes_config_map.identityhub-credentials-map",
            "module.consumer-identityhub.kubernetes_deployment.identityhub",
            "module.consumer-postgres.kubernetes_config_map.postgres-env",
            "module.consumer-postgres.kubernetes_deployment.postgres",
            "module.consumer-postgres.kubernetes_service.pg-service",
            "module.consumer-sts.kubernetes_config_map.sts-config",
            "module.consumer-sts.kubernetes_deployment.sts",
            "module.consumer-sts.kubernetes_service.sts-service",
            "module.consumer-vault.helm_release.vault",
            "module.consumer-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.consumer-postgres",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "pg-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/consumer-postgres-service",
            "metadata": [
              {
                "generation": 0,
                "name": "consumer-postgres-service",
                "namespace": "mvd",
                "resource_version": "730",
                "uid": "b217bbc1-3330-408e-b57b-3402eab7022f"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.99.229.222",
                "cluster_ips": [
                  "10.99.229.222"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "pg-port",
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "consumer-postgres"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-consumer",
            "kubernetes_namespace.ns",
            "module.consumer-postgres.kubernetes_config_map.postgres-env",
            "module.consumer-postgres.kubernetes_deployment.postgres"
          ]
        }
      ]
    },
    {
      "module": "module.consumer-sts",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "sts-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/consumer-sts-service",
            "metadata": [
              {
                "generation": 0,
                "name": "consumer-sts-service",
                "namespace": "mvd",
                "resource_version": "861",
                "uid": "430191a4-8bd6-4448-98d5-d81ffd6beacb"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.102.50.11",
                "cluster_ips": [
                  "10.102.50.11"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "accounts-port",
                    "node_port": 0,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "8081"
                  },
                  {
                    "name": "sts-port",
                    "node_port": 0,
                    "port": 8082,
                    "protocol": "TCP",
                    "target_port": "8082"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "consumer-sts"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-consumer",
            "kubernetes_namespace.ns",
            "module.consumer-postgres.kubernetes_config_map.postgres-env",
            "module.consumer-postgres.kubernetes_deployment.postgres",
            "module.consumer-postgres.kubernetes_service.pg-service",
            "module.consumer-sts.kubernetes_config_map.sts-config",
            "module.consumer-sts.kubernetes_deployment.sts",
            "module.consumer-vault.helm_release.vault",
            "module.consumer-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.provider-catalog-server",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "api-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mvd/provider-catalog-server-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "provider-catalog-server-ingress",
                "namespace": "mvd",
                "resource_version": "2270",
                "uid": "62cee30a-0608-49cc-92ef-dd13d01afa80"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-catalog-server-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider-catalog-server/health(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-catalog-server-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider-catalog-server/cp(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-catalog-server.kubernetes_config_map.catalog-server-config",
            "module.provider-catalog-server.kubernetes_deployment.connector",
            "module.provider-catalog-server.kubernetes_service.controlplane-service",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres",
            "module.provider-postgres.kubernetes_service.pg-service",
            "module.provider-sts.kubernetes_config_map.sts-config",
            "module.provider-sts.kubernetes_deployment.sts",
            "module.provider-sts.kubernetes_service.sts-service",
            "module.provider-vault.helm_release.vault",
            "module.provider-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.provider-catalog-server",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "controlplane-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/provider-catalog-server-controlplane",
            "metadata": [
              {
                "generation": 0,
                "name": "provider-catalog-server-controlplane",
                "namespace": "mvd",
                "resource_version": "2257",
                "uid": "9f26e558-bdda-451c-9fe4-1cffe04d6d67"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.111.82.123",
                "cluster_ips": [
                  "10.111.82.123"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "health",
                    "node_port": 30476,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  },
                  {
                    "name": "management",
                    "node_port": 32164,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "8081"
                  },
                  {
                    "name": "protocol",
                    "node_port": 32493,
                    "port": 8082,
                    "protocol": "TCP",
                    "target_port": "8082"
                  },
                  {
                    "name": "debug",
                    "node_port": 32457,
                    "port": 1044,
                    "protocol": "TCP",
                    "target_port": "1044"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "provider-catalog-server"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-catalog-server.kubernetes_config_map.catalog-server-config",
            "module.provider-catalog-server.kubernetes_deployment.connector",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres",
            "module.provider-postgres.kubernetes_service.pg-service",
            "module.provider-sts.kubernetes_config_map.sts-config",
            "module.provider-sts.kubernetes_deployment.sts",
            "module.provider-sts.kubernetes_service.sts-service",
            "module.provider-vault.helm_release.vault",
            "module.provider-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.provider-identityhub",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "api-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mvd/provider-identityhub-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "provider-identityhub-ingress",
                "namespace": "mvd",
                "resource_version": "1722",
                "uid": "67698c38-a6b2-40f2-89ab-5d92af31e503"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-identityhub",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 7081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider/cs(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.49.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-identityhub.kubernetes_config_map.identityhub-config",
            "module.provider-identityhub.kubernetes_config_map.identityhub-credentials-map",
            "module.provider-identityhub.kubernetes_deployment.identityhub",
            "module.provider-identityhub.kubernetes_service.ih-service",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres",
            "module.provider-postgres.kubernetes_service.pg-service",
            "module.provider-sts.kubernetes_config_map.sts-config",
            "module.provider-sts.kubernetes_deployment.sts",
            "module.provider-sts.kubernetes_service.sts-service",
            "module.provider-vault.helm_release.vault",
            "module.provider-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.provider-identityhub",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "did-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mvd/provider-did-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/provider/$2"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "provider-did-ingress",
                "namespace": "mvd",
                "resource_version": "1723",
                "uid": "8345dbd5-8e31-48d3-91ed-d0e44aefa825"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-identityhub",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 7083
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider(/|\u0026)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.49.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-identityhub.kubernetes_config_map.identityhub-config",
            "module.provider-identityhub.kubernetes_config_map.identityhub-credentials-map",
            "module.provider-identityhub.kubernetes_deployment.identityhub",
            "module.provider-identityhub.kubernetes_service.ih-service",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres",
            "module.provider-postgres.kubernetes_service.pg-service",
            "module.provider-sts.kubernetes_config_map.sts-config",
            "module.provider-sts.kubernetes_deployment.sts",
            "module.provider-sts.kubernetes_service.sts-service",
            "module.provider-vault.helm_release.vault",
            "module.provider-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.provider-identityhub",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "ih-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/provider-identityhub",
            "metadata": [
              {
                "generation": 0,
                "name": "provider-identityhub",
                "namespace": "mvd",
                "resource_version": "1691",
                "uid": "a8f33fa3-e2bd-444c-a65c-4fa38c819de4"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.106.211.241",
                "cluster_ips": [
                  "10.106.211.241"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "presentation",
                    "node_port": 31486,
                    "port": 7082,
                    "protocol": "TCP",
                    "target_port": "7082"
                  },
                  {
                    "name": "debug",
                    "node_port": 32720,
                    "port": 1044,
                    "protocol": "TCP",
                    "target_port": "1044"
                  },
                  {
                    "name": "management",
                    "node_port": 32759,
                    "port": 7081,
                    "protocol": "TCP",
                    "target_port": "7081"
                  },
                  {
                    "name": "did",
                    "node_port": 31323,
                    "port": 7083,
                    "protocol": "TCP",
                    "target_port": "7083"
                  },
                  {
                    "name": "sts",
                    "node_port": 31771,
                    "port": 7084,
                    "protocol": "TCP",
                    "target_port": "7084"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "provider-identityhub"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-identityhub.kubernetes_config_map.identityhub-config",
            "module.provider-identityhub.kubernetes_config_map.identityhub-credentials-map",
            "module.provider-identityhub.kubernetes_deployment.identityhub",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres",
            "module.provider-postgres.kubernetes_service.pg-service",
            "module.provider-sts.kubernetes_config_map.sts-config",
            "module.provider-sts.kubernetes_deployment.sts",
            "module.provider-sts.kubernetes_service.sts-service",
            "module.provider-vault.helm_release.vault",
            "module.provider-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.provider-manufacturing-connector",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "api-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mvd/provider-manufacturing-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "provider-manufacturing-ingress",
                "namespace": "mvd",
                "resource_version": "2325",
                "uid": "8ecfd2f4-c119-42b7-bbc6-cb1e7ccb2b51"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-manufacturing-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider-manufacturing/health(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-manufacturing-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider-manufacturing/cp(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-manufacturing-dataplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 11002
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider-manufacturing/public(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-manufacturing-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8084
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider-manufacturing/fc(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-manufacturing-vault",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8200
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider-manufacturing/vault(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-manufacturing-connector.kubernetes_config_map.connector-config",
            "module.provider-manufacturing-connector.kubernetes_config_map.dataplane-config",
            "module.provider-manufacturing-connector.kubernetes_config_map.participants-map",
            "module.provider-manufacturing-connector.kubernetes_deployment.controlplane",
            "module.provider-manufacturing-connector.kubernetes_deployment.dataplane",
            "module.provider-manufacturing-connector.kubernetes_service.controlplane-service",
            "module.provider-manufacturing-connector.kubernetes_service.dataplane-service",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres",
            "module.provider-postgres.kubernetes_service.pg-service",
            "module.provider-sts.kubernetes_config_map.sts-config",
            "module.provider-sts.kubernetes_deployment.sts",
            "module.provider-sts.kubernetes_service.sts-service",
            "module.provider-vault.helm_release.vault",
            "module.provider-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.provider-manufacturing-connector",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "controlplane-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/provider-manufacturing-controlplane",
            "metadata": [
              {
                "generation": 0,
                "name": "provider-manufacturing-controlplane",
                "namespace": "mvd",
                "resource_version": "2267",
                "uid": "929735e9-8f7b-4874-b0c5-e0b5c151ce8b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.104.135.72",
                "cluster_ips": [
                  "10.104.135.72"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "health",
                    "node_port": 31120,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  },
                  {
                    "name": "management",
                    "node_port": 31476,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "8081"
                  },
                  {
                    "name": "catalog",
                    "node_port": 30773,
                    "port": 8084,
                    "protocol": "TCP",
                    "target_port": "8084"
                  },
                  {
                    "name": "protocol",
                    "node_port": 31939,
                    "port": 8082,
                    "protocol": "TCP",
                    "target_port": "8082"
                  },
                  {
                    "name": "debug",
                    "node_port": 30678,
                    "port": 1044,
                    "protocol": "TCP",
                    "target_port": "1044"
                  },
                  {
                    "name": "control",
                    "node_port": 32202,
                    "port": 8083,
                    "protocol": "TCP",
                    "target_port": "8083"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "provider-manufacturing-controlplane"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-manufacturing-connector.kubernetes_config_map.connector-config",
            "module.provider-manufacturing-connector.kubernetes_config_map.participants-map",
            "module.provider-manufacturing-connector.kubernetes_deployment.controlplane",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres",
            "module.provider-postgres.kubernetes_service.pg-service",
            "module.provider-sts.kubernetes_config_map.sts-config",
            "module.provider-sts.kubernetes_deployment.sts",
            "module.provider-sts.kubernetes_service.sts-service",
            "module.provider-vault.helm_release.vault",
            "module.provider-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.provider-manufacturing-connector",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "dataplane-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/provider-manufacturing-dataplane",
            "metadata": [
              {
                "generation": 0,
                "name": "provider-manufacturing-dataplane",
                "namespace": "mvd",
                "resource_version": "2322",
                "uid": "1bc8c597-4071-4c9e-b2ec-25c9174e197b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.105.160.254",
                "cluster_ips": [
                  "10.105.160.254"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "control",
                    "node_port": 31415,
                    "port": 8083,
                    "protocol": "TCP",
                    "target_port": "8083"
                  },
                  {
                    "name": "public",
                    "node_port": 30926,
                    "port": 11002,
                    "protocol": "TCP",
                    "target_port": "11002"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "provider-manufacturing-dataplane"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-manufacturing-connector.kubernetes_config_map.connector-config",
            "module.provider-manufacturing-connector.kubernetes_config_map.dataplane-config",
            "module.provider-manufacturing-connector.kubernetes_config_map.participants-map",
            "module.provider-manufacturing-connector.kubernetes_deployment.controlplane",
            "module.provider-manufacturing-connector.kubernetes_deployment.dataplane",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres",
            "module.provider-postgres.kubernetes_service.pg-service",
            "module.provider-sts.kubernetes_config_map.sts-config",
            "module.provider-sts.kubernetes_deployment.sts",
            "module.provider-sts.kubernetes_service.sts-service",
            "module.provider-vault.helm_release.vault",
            "module.provider-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.provider-postgres",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "pg-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/provider-postgres-service",
            "metadata": [
              {
                "generation": 0,
                "name": "provider-postgres-service",
                "namespace": "mvd",
                "resource_version": "734",
                "uid": "c8f934b3-69fc-4eef-8ddf-3fed8c558ac0"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.109.169.84",
                "cluster_ips": [
                  "10.109.169.84"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "pg-port",
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "provider-postgres"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres"
          ]
        }
      ]
    },
    {
      "module": "module.provider-qna-connector",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "api-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "mvd/provider-qna-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$2",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "provider-qna-ingress",
                "namespace": "mvd",
                "resource_version": "1827",
                "uid": "d4f97073-9e74-4716-bdc1-6f4635cd607e"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-qna-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider-qna/health(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-qna-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider-qna/cp(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-qna-dataplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 11002
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider-qna/public(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-qna-controlplane",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8084
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider-qna/fc(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "provider-qna-vault",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8200
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/provider-qna/vault(/|$)(.*)",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.49.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres",
            "module.provider-postgres.kubernetes_service.pg-service",
            "module.provider-qna-connector.kubernetes_config_map.connector-config",
            "module.provider-qna-connector.kubernetes_config_map.dataplane-config",
            "module.provider-qna-connector.kubernetes_config_map.participants-map",
            "module.provider-qna-connector.kubernetes_deployment.controlplane",
            "module.provider-qna-connector.kubernetes_deployment.dataplane",
            "module.provider-qna-connector.kubernetes_service.controlplane-service",
            "module.provider-qna-connector.kubernetes_service.dataplane-service",
            "module.provider-sts.kubernetes_config_map.sts-config",
            "module.provider-sts.kubernetes_deployment.sts",
            "module.provider-sts.kubernetes_service.sts-service",
            "module.provider-vault.helm_release.vault",
            "module.provider-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.provider-qna-connector",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "controlplane-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/provider-qna-controlplane",
            "metadata": [
              {
                "generation": 0,
                "name": "provider-qna-controlplane",
                "namespace": "mvd",
                "resource_version": "1755",
                "uid": "f7618032-f40a-479b-b341-d81dfaa7a9f2"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.104.119.31",
                "cluster_ips": [
                  "10.104.119.31"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "health",
                    "node_port": 30472,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  },
                  {
                    "name": "management",
                    "node_port": 30917,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "8081"
                  },
                  {
                    "name": "catalog",
                    "node_port": 30605,
                    "port": 8084,
                    "protocol": "TCP",
                    "target_port": "8084"
                  },
                  {
                    "name": "protocol",
                    "node_port": 31752,
                    "port": 8082,
                    "protocol": "TCP",
                    "target_port": "8082"
                  },
                  {
                    "name": "debug",
                    "node_port": 30520,
                    "port": 1044,
                    "protocol": "TCP",
                    "target_port": "1044"
                  },
                  {
                    "name": "control",
                    "node_port": 31924,
                    "port": 8083,
                    "protocol": "TCP",
                    "target_port": "8083"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "provider-qna-controlplane"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres",
            "module.provider-postgres.kubernetes_service.pg-service",
            "module.provider-qna-connector.kubernetes_config_map.connector-config",
            "module.provider-qna-connector.kubernetes_config_map.participants-map",
            "module.provider-qna-connector.kubernetes_deployment.controlplane",
            "module.provider-sts.kubernetes_config_map.sts-config",
            "module.provider-sts.kubernetes_deployment.sts",
            "module.provider-sts.kubernetes_service.sts-service",
            "module.provider-vault.helm_release.vault",
            "module.provider-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.provider-qna-connector",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "dataplane-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/provider-qna-dataplane",
            "metadata": [
              {
                "generation": 0,
                "name": "provider-qna-dataplane",
                "namespace": "mvd",
                "resource_version": "1806",
                "uid": "d6bec10f-14ef-4804-9e8a-6d9091bdb158"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.105.98.18",
                "cluster_ips": [
                  "10.105.98.18"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "control",
                    "node_port": 31767,
                    "port": 8083,
                    "protocol": "TCP",
                    "target_port": "8083"
                  },
                  {
                    "name": "public",
                    "node_port": 30563,
                    "port": 11002,
                    "protocol": "TCP",
                    "target_port": "11002"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "provider-qna-dataplane"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres",
            "module.provider-postgres.kubernetes_service.pg-service",
            "module.provider-qna-connector.kubernetes_config_map.connector-config",
            "module.provider-qna-connector.kubernetes_config_map.dataplane-config",
            "module.provider-qna-connector.kubernetes_config_map.participants-map",
            "module.provider-qna-connector.kubernetes_deployment.controlplane",
            "module.provider-qna-connector.kubernetes_deployment.dataplane",
            "module.provider-sts.kubernetes_config_map.sts-config",
            "module.provider-sts.kubernetes_deployment.sts",
            "module.provider-sts.kubernetes_service.sts-service",
            "module.provider-vault.helm_release.vault",
            "module.provider-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    },
    {
      "module": "module.provider-sts",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "sts-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "mvd/provider-sts-service",
            "metadata": [
              {
                "generation": 0,
                "name": "provider-sts-service",
                "namespace": "mvd",
                "resource_version": "910",
                "uid": "ea3d5907-c280-4cd3-843e-57282ab4306a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.109.121.219",
                "cluster_ips": [
                  "10.109.121.219"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "accounts-port",
                    "node_port": 0,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "8081"
                  },
                  {
                    "name": "sts-port",
                    "node_port": 0,
                    "port": 8082,
                    "protocol": "TCP",
                    "target_port": "8082"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "provider-sts"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_config_map.postgres-initdb-config-cs",
            "kubernetes_config_map.postgres-initdb-config-ih",
            "kubernetes_config_map.postgres-initdb-config-pm",
            "kubernetes_config_map.postgres-initdb-config-pqna",
            "kubernetes_namespace.ns",
            "module.provider-postgres.kubernetes_config_map.postgres-env",
            "module.provider-postgres.kubernetes_deployment.postgres",
            "module.provider-postgres.kubernetes_service.pg-service",
            "module.provider-sts.kubernetes_config_map.sts-config",
            "module.provider-sts.kubernetes_deployment.sts",
            "module.provider-vault.helm_release.vault",
            "module.provider-vault.tls_private_key.private_signing_key"
          ]
        }
      ]
    }
  ]
}